vcluster_versioned_docs/version-0.20.0/configure/vcluster-yaml/networking/resolve-dns.mdx
---
title: Resolve DNS
sidebar_label: resolveDNS
sidebar_class_name: pro
sidebar_position: 2
---

import ResolveDNS from '../../../_partials/config/networking/resolveDNS.mdx'
import ProAdmonition from '../../../_partials/admonitions/pro-admonition.mdx'

<ProAdmonition/>

This feature enables adding custom DNS rules to the virtual cluster to allow communication with services deployed in the host cluster and across services in separate vCluster instances.

## Examples

### Map a hostname

This is a URL-based mapping of one virtual cluster hostname to another hostname. A `wikipedia.com` DNS lookup would return a DNS response with answer as `en.wikipedia.org`.

```yaml
networking:
  resolveDNS:
    - hostname: wikipedia.com
      target:
        hostname: en.wikipedia.org
```

### Map a virtual cluster service to a host cluster service

This example maps the virtual cluster's `my-namespace/my-svc` resource to the host cluster's `dns-test/nginx-svc` resource. The DNS response is the `nginx-svc` IP in the host's `dns-test` namespace.

```yaml
networking:
  resolveDNS:
    - service: my-namespace/my-svc
      target:
        hostService: dns-test/nginx-svc
```

### Map services across vCluster instances

This example maps a virtual cluster Service to another Service in a separate virtual cluster. 
`my-ns-in-vcluster/my-svc-vcluster` maps to  `dns-test-in-vcluster-ns/test-in-vcluster-service` in a vCluster instance named `test-cluster` deployed in the host namespace `test-vcluster-ns`.

```yaml
networking:
  resolveDNS:
    - service: my-ns-in-vcluster/my-svc-vcluster
      target:
        vClusterService: test-vcluster-ns/test-vcluster/dns-test-in-vcluster-ns/test-in-vcluster-service
```

### Map namespaces

Map all services under a virtual cluster namespace to a host namespace. This host namespace could also contain another vCluster instance, thereby mapping all vCluster services to another vCluster instance.
```yaml
networking:
  resolveDNS:
    - namespace: test-in-vcluster-ns
      target:
        hostNamespace: external-vc-ns
```

All services in the `test-vcluster` virtual cluster's target namespace `test-in-vcluster-ns`  map to namespace `external-vc-ns`.

```
    ┌──────────────────────┐┌──────────────────────────────┐
    │nginx.external-vc-ns  ││nginx.test-in-vcluster-ns     │
    │svcA.external-vc-ns   ││svcA.test-in-vcluster-ns      │
    │svcB.external-vc-ns   ││svcB.test-in-vcluster-ns      │
    │...                   ││...                           │
    └──────────────────────┘└──────────────────────────────┘

```

## Config reference

<ResolveDNS/>
